...
import org.kiwix.kiwixmobile.core.ui.models.ActionMenuItem
import org.kiwix.kiwixmobile.core.ui.models.toPainter
import org.kiwix.kiwixmobile.core.ui.theme.KiwixTheme
import org.kiwix.kiwixmobile.core.utils.ComposeDimens.KIWIX_TOOLBAR_SHADOW_ELEVATION
import org.kiwix.kiwixmobile.core.utils.ComposeDimens.SIXTEEN_DP

const val TOOLBAR_TITLE_TESTING_TAG = "toolbarTitle"
const val OVERFLOW_MENU_BUTTON_TESTING_TAG = "overflowMenuButtonTestingTag"

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun KiwixAppBar(
  modifier: Modifier = Modifier,
...
